force-app/main/default/objects/DID__c/DID__c.object-meta.xml
<CustomObject>
    <label>DID</label>
    <nameField>
        <label>DID Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DIDs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>