force-app/main/default/objects/DID__c/fields/Brand__c.field-meta.xml
<CustomField>
    <fullName>Brand__c</fullName>
    <label>Brand</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Fax.com</fullName>
            </value>
            <value>
                <fullName>Rapidfax</fullName>
            </value>
            <value>
                <fullName>Send2Fax</fullName>
            </value>
            <value>
                <fullName>Smartfax</fullName>
            </value>
            <value>
                <fullName>Trustfax</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>