force-app/main/default/objects/DID__c/fields/City_Phone_City__c.field-meta.xml
<CustomField>
    <fullName>City_Phone_City__c</fullName>
    <label>City (Phone City)</label>
    <length>20</length>
    <type>Text</type>
</CustomField>