force-app/main/default/objects/DID__c/fields/Closed_Reason__c.field-meta.xml
<CustomField>
    <fullName>Closed_Reason__c</fullName>
    <label>Closed Reason</label>
    <length>100</length>
    <type>Text</type>
</CustomField>