force-app/main/default/objects/DID__c/fields/Corporate_ID__c.field-meta.xml
<CustomField>
    <fullName>Corporate_ID__c</fullName>
    <description>Placeholder until we determine how this field will be populated.</description>
    <label>Corporate ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>