force-app/main/default/objects/DID__c/fields/DID_End_Date__c.field-meta.xml
<CustomField>
    <fullName>DID_End_Date__c</fullName>
    <label>DID End Date</label>
    <type>Date</type>
</CustomField>