force-app/main/default/objects/DID__c/fields/DID_ID_18__c.field-meta.xml
<CustomField>
    <fullName>DID_ID_18__c</fullName>
    <description>Converts a 15-character ID into a case insensitive 18-character ID</description>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DID ID 18</label>
    <type>Text</type>
</CustomField>