force-app/main/default/objects/DID__c/fields/DID_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>DID_Start_Date__c</fullName>
    <label>DID Start Date</label>
    <type>Date</type>
</CustomField>