force-app/main/default/objects/DID__c/fields/EM_Storage_Enabled__c.field-meta.xml
<CustomField>
    <fullName>EM_Storage_Enabled__c</fullName>
    <label>EM Storage Enabled</label>
    <length>10</length>
    <type>Text</type>
</CustomField>