force-app/main/default/objects/DID__c/fields/Fax_Format__c.field-meta.xml
<CustomField>
    <fullName>Fax_Format__c</fullName>
    <label>Fax Format</label>
    <length>60</length>
    <type>Text</type>
</CustomField>