force-app/main/default/objects/DID__c/fields/GCC__c.field-meta.xml
<CustomField>
    <fullName>GCC__c</fullName>
    <defaultValue>false</defaultValue>
    <description>SFSD-888 Created this field to tag german geo compliance DID to trigger emails to capture proof of identity</description>
    <label>GCC</label>
    <type>Checkbox</type>
</CustomField>