force-app/main/default/objects/DID__c/fields/Inbound_Email_2__c.field-meta.xml
<CustomField>
    <fullName>Inbound_Email_2__c</fullName>
    <label>Inbound Email 2</label>
    <length>100</length>
    <type>Text</type>
</CustomField>