force-app/main/default/objects/DID__c/fields/Inbound_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Inbound_Email_Address__c</fullName>
    <description>Placeholder until we determine where this will be pulled from.</description>
    <label>Inbound Email Address</label>
    <type>Email</type>
</CustomField>