force-app/main/default/objects/DID__c/fields/Offer_Code_Description__c.field-meta.xml
<CustomField>
    <fullName>Offer_Code_Description__c</fullName>
    <label>Offer Code Description</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>