force-app/main/default/objects/DID__c/fields/Offer_Code_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Offer_Code_Start_Date__c</fullName>
    <label>Offer Code Start Date</label>
    <type>Date</type>
</CustomField>