force-app/main/default/objects/DID__c/fields/Offercode__c.field-meta.xml
<CustomField>
    <fullName>Offercode__c</fullName>
    <label>Offercode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>