force-app/main/default/objects/DID__c/fields/open__c.field-meta.xml
<CustomField>
    <fullName>open__c</fullName>
    <formula>&quot;https://cs4.salesforce.com/apex/cases_New?cas4=&quot;&amp; Account__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>open</label>
    <type>Text</type>
</CustomField>