force-app/main/default/objects/DID__c/fields/OpenCase__c.field-meta.xml
<CustomField>
    <fullName>OpenCase__c</fullName>
    <formula>HYPERLINK(&quot;/apex/cases_New&quot;, &quot;Open Case&quot;, &quot;_self&quot;)</formula>
    <label>Open Case</label>
    <type>Text</type>
</CustomField>