force-app/main/default/objects/DID__c/fields/opencaseContact__c.field-meta.xml
<CustomField>
    <fullName>opencaseContact__c</fullName>
    <formula>Contact__r.FirstName &amp; &quot; &quot; &amp; Contact__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>opencaseContact</label>
    <type>Text</type>
</CustomField>