force-app/main/default/objects/DID__c/fields/Ported__c.field-meta.xml
<CustomField>
    <fullName>Ported__c</fullName>
    <label>Ported</label>
    <length>20</length>
    <type>Text</type>
</CustomField>