force-app/main/default/objects/DID__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <description>This is a Placeholder until we determine how this field will be derived.</description>
    <label>Product</label>
    <length>80</length>
    <type>Text</type>
</CustomField>