force-app/main/default/objects/DID__c/fields/Server_ID_COLO__c.field-meta.xml
<CustomField>
    <fullName>Server_ID_COLO__c</fullName>
    <label>Server ID/ COLO</label>
    <length>20</length>
    <type>Text</type>
</CustomField>