force-app/main/default/objects/DID__c/fields/ServiceKey__c.field-meta.xml
<CustomField>
    <fullName>ServiceKey__c</fullName>
    <externalId>true</externalId>
    <label>ServiceKey</label>
    <length>60</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>