force-app/main/default/objects/DID__c/listViews/Admin_Verify_DIDs.listView-meta.xml
<ListView>
    <fullName>Admin_Verify_DIDs</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Brand__c</columns>
    <columns>Closed_Reason__c</columns>
    <columns>Contact__c</columns>
    <columns>Corporate_ID__c</columns>
    <columns>Customer_ID__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OWNER.ALIAS</field>
        <operation>equals</operation>
        <value>Eturner</value>
    </filters>
    <label>Admin Verify DIDs</label>
    <language>en_US</language>
    <sharedTo>
        <group>CSManagementTeam</group>
        <group>SFDC_Admins</group>
    </sharedTo>
</ListView>