force-app/main/default/objects/DID__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Brand__c</columns>
    <columns>Account__c</columns>
    <columns>Contact__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>Ported__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>