force-app/main/default/objects/DID__c/listViews/All_My_DIDs.listView-meta.xml
<ListView>
    <fullName>All_My_DIDs</fullName>
    <columns>NAME</columns>
    <columns>Brand__c</columns>
    <columns>Account__c</columns>
    <columns>Contact__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>Ported__c</columns>
    <filterScope>Mine</filterScope>
    <label>All My DIDs</label>
</ListView>